--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "start-server-and-test": "^2.0.9",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
-    "vite-plugin-vue-devtools": "^7.6.8",
     "vitest": "^2.1.8",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^2.1.10",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
