--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.7",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
@@ -28,19 +29,19 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.18",
     "cypress": "^13.17.0",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.4.35",
     "start-server-and-test": "^2.0.9",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vitest": "^2.1.8",
-    "vue-tsc": "^2.1.10",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "vue-tsc": "^2.1.10"
   }
 }
